/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;

/* Represents granted permissions of a list of apps */
message CompanionAppsPermissions {
  // granted permissions of apps
  repeated AppPermissions appPermissions = 1;

  /* Represents the granted permissions of an app */
  message AppPermissions {
    // package name of the app
    string packageName = 1;

    // signing certificates used to sign the APK contents of this app
    bytes certificates = 2;

    // granted permissions
    repeated string permission = 3;
  }
}
